AsyncResult::end() now requires the PollState object as a parameter so that only AsSQL::endQuery() can be used to end a query. AsSQL:: removed because it is not required with this.

--- a/docs/latex/classAsSQL.tex
+++ b/docs/latex/classAsSQL.tex
@@ -11,6 +11,8 @@
 \hyperlink{classAsSQL_a4768f01dcde0f9ff4205bffd96c0da91}{begin\-Query} (\$str\-Sql, \$func\-Callback, \$obj\-Tag)
 \item 
 \hyperlink{classAsSQL_a0f9c3738d7298dfbf2c0b0a0d900cee2}{end\-Query} (\$obj\-Async\-Result)
+\item 
+\hyperlink{classAsSQL_aa8ed93e156248c5aea36ac417ceb855f}{close} ()
 \end{DoxyCompactItemize}
 
 
@@ -70,7 +72,14 @@ Begins a My\-S\-Q\-L query.
 {\em \$obj\-Tag} & An object to put in the resulting \hyperlink{classAsyncResult}{Async\-Result} object, which can be collected by the callback function. \\
 \hline
 \end{DoxyParams}
-\hypertarget{classAsSQL_a0f9c3738d7298dfbf2c0b0a0d900cee2}{\index{As\-S\-Q\-L@{As\-S\-Q\-L}!end\-Query@{end\-Query}}
+\hypertarget{classAsSQL_aa8ed93e156248c5aea36ac417ceb855f}{\index{As\-S\-Q\-L@{As\-S\-Q\-L}!close@{close}}
+\index{close@{close}!AsSQL@{As\-S\-Q\-L}}
+\subsubsection[{close}]{\setlength{\rightskip}{0pt plus 5cm}As\-S\-Q\-L\-::close (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classAsSQL_aa8ed93e156248c5aea36ac417ceb855f}
+Closes the connection to the database. \hypertarget{classAsSQL_a0f9c3738d7298dfbf2c0b0a0d900cee2}{\index{As\-S\-Q\-L@{As\-S\-Q\-L}!end\-Query@{end\-Query}}
 \index{end\-Query@{end\-Query}!AsSQL@{As\-S\-Q\-L}}
 \subsubsection[{end\-Query}]{\setlength{\rightskip}{0pt plus 5cm}As\-S\-Q\-L\-::end\-Query (
 \begin{DoxyParamCaption}
@@ -102,4 +111,4 @@ The underlying My\-S\-Q\-Li object which respresents the connection.
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-src/As\-S\-Q\-L.\-php\end{DoxyCompactItemize}
+src/\hyperlink{AsSQL_8php}{As\-S\-Q\-L.\-php}\end{DoxyCompactItemize}
