--- a/docs/latex/classPollPool.tex
+++ b/docs/latex/classPollPool.tex
@@ -51,4 +51,4 @@ This needs to be called periodically, either in a loop or in a tick function.
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-src/Poll\-Pool.\-php\end{DoxyCompactItemize}
+src/\hyperlink{PollPool_8php}{Poll\-Pool.\-php}\end{DoxyCompactItemize}
