--- a/docs/latex/classPollState.tex
+++ b/docs/latex/classPollState.tex
@@ -86,4 +86,4 @@ The \hyperlink{classAsSQL}{As\-S\-Q\-L} wrapper for the link.
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-src/Poll\-State.\-php\end{DoxyCompactItemize}
+src/\hyperlink{PollState_8php}{Poll\-State.\-php}\end{DoxyCompactItemize}
