--- a/docs/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/docs/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -4,13 +4,15 @@
 \subsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
-file {\bfseries As\-S\-Q\-L.\-php}
+file \hyperlink{AsSQL_8php}{As\-S\-Q\-L.\-php}
 \item 
-file {\bfseries Async\-Result.\-php}
+file {\bfseries As\-S\-Q\-L\-Exception.\-php}
+\item 
+file \hyperlink{AsyncResult_8php}{Async\-Result.\-php}
 \item 
 file {\bfseries include.\-php}
 \item 
-file {\bfseries Poll\-Pool.\-php}
+file \hyperlink{PollPool_8php}{Poll\-Pool.\-php}
 \item 
-file {\bfseries Poll\-State.\-php}
+file \hyperlink{PollState_8php}{Poll\-State.\-php}
 \end{DoxyCompactItemize}
